# CV_Mini_Projet

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_MODEL.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.github/agents/: plan-analyzer.agent.md  plan-corrector.agent.md  pr-review-fixer.agent.md  tdd-fixer.agent.md  tdd-implementer.agent.md  tdd-reviewer.agent.md
.github/instructions/: PULL_REQUEST_REVIEW.instructions.md
.github/shared/: coding_rules.md
.github/workflows/: ci.yml
data/demo/: expected_results.json
data/ground_truth/: ground_truth.csv
docs/: Shelf Scan v2.pptx  Shelf Scan.pptx
docs/plan/: implementation_plan.md
docs/request_changes/: review_M1_v1.md  review_M1_v2.md  review_M2_v1.md  review_M2_v2.md  review_M3_v1.md  review_M3_v2.md  review_M4_v1.md  review_M4_v2.md
docs/slides/: notes_orateur.md  soutenance.md
docs/specifications/: specifications.md
docs/sujet/: sujet.txt
src/: __init__.py  app.py  benchmark.py  demo_benchmark.py  detect_text.py  eval.py  eval_utils.py  failure_analysis.py  ocr.py  pipeline.py  postprocess.py  preprocess.py  segment.py  visualization.py
tests/: test_app.py  test_benchmark.py  test_code_cleanup.py  test_demo_images.py  test_detect_text.py  test_difficult_cases.py  test_eval.py  test_eval_utils.py  test_failure_analysis.py  test_ocr.py  test_pipeline.py  test_pipeline_reproducibility.py  test_postprocess.py  test_preprocess.py  test_project_structure.py  test_readme.py  test_segment.py  test_slides.py  test_visualization.py
(+79 files in other folders)
