[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shelfscan"
version = "0.1.0"
description = "Inventaire de bibliothèque par reconnaissance visuelle"
requires-python = ">=3.10"
dependencies = [
    # Image processing
    "opencv-python>=4.8,<5",
    "Pillow>=10.0,<11",
    # OCR engines
    "paddlepaddle>=2.6",
    "paddleocr>=2.7",
    "pytesseract>=0.3,<1",
    "transformers>=4.36,<5",
    # Deep learning
    "torch>=2.10,<3",
    "torchvision>=0.25,<1",
    # Data & text
    "pandas>=2.1,<3",
    "rapidfuzz>=3.5,<4",
    "requests>=2.31,<3",
    # Demo interface
    "streamlit>=1.30,<2",
    # Evaluation
    "editdistance>=0.6,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1",
    "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
